# ai-brokerage-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  gateway.md
examples/mcp/: codex.json
examples/skills/: portfolio-review.md  trade-review.md  watchlist-review.md
src/agentic_brokerage_mcp/: __init__.py  config.py  dependencies.py  mcp_server.py  mock.py
src/agentic_brokerage_mcp/db/: engine.py  models.py
src/agentic_brokerage_mcp/ibkr/: account.py  client.py  market_data.py  orders.py  session.py
src/agentic_brokerage_mcp/indicators/: __init__.py
src/agentic_brokerage_mcp/models/: __init__.py  account.py  market.py  orders.py  positions.py  session.py
src/agentic_brokerage_mcp/services/: analysis.py  audit.py  market_data.py  news.py  order_service.py  portfolio.py  risk.py  valuation.py  watchlist.py
src/agentic_brokerage_mcp/tools/: audit.py  market_data.py  orders.py  portfolio.py  risk.py  session.py  watchlist.py
tests/: conftest.py  test_audit.py  test_contract_resolution.py  test_core_models.py  test_market_data_service.py  test_order_service.py  test_portfolio_service.py  test_risk.py  test_watchlist.py
tests/mcp/: test_orders_tools.py  test_portfolio_tool.py
