[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-brokerage-mcp"
version = "0.1.0"
description = "Opinionated MCP server for AI-assisted brokerage workflows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "mcp>=1.0",
    "pandas>=2.2",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "ta>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
]

[project.scripts]
agentic-brokerage-mcp = "agentic_brokerage_mcp.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_brokerage_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
